[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.23"
actix-web = "4"
log = "0.4.16"
env_logger = "0.10.0"
actix-http = "3.0.4"
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
sea-orm = { version = "0.10.6", default-features = true, features = [ "macros", "postgres-array""debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
#
#actix-web = "4.0.0"
#sea-orm = "0.9.2"
#tokio = { version = "1.16", features = ["full"] }

#[dependencies]
#barter = "0.8.6"
#barter-data = "0.5.11"
#barter-integration = "0.5.1"
#
## Logging
#tracing = "0.1.36"
#
## Async
tokio = { version = "1.20.1", features = ["sync"] }
#tokio-stream = { version = "0.1.9", features = ["sync"] }
#futures = "0.3.21"
#
## Error
#thiserror = "1.0.32"
#
## SerDe
#serde = { version = "1.0.143", features = ["derive"] }
#serde_json = "1.0.83"
#
## Persistence
#redis = "0.22.1"
#
## Strategy
#ta = "0.5.0"
#
## Misc
#uuid = {version = "1.2.2", features = ["v4", "serde"]}
#chrono = {version = "0.4.21", features = ["serde"]}
#prettytable-rs = "0.10.0"
#parking_lot = "0.12.1"
